--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=0.0.0.0
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=app_cliente
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
